--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
     - LATEST_TAG=1.3
     - APP13=1.3
   matrix:
-    - TAG=1.3 APP_VER="{APP13}" EXTRA_TAG=1
+    - TAG=1.3 APP_VER="${APP13}" EXTRA_TAG=1
 
 script:
   - cd "${APP_VER:0:1}" || cd "${APP_VER:0:3}"
