--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,13 @@ services:
 env:
   global:
     - LATEST_TAG=1.3
-    - APP13=1.3
+    - APP13=1.3.0
   matrix:
     - TAG=1.3 APP_VER="${APP13}" EXTRA_TAG=1
 
 script:
   - cd "${APP_VER:0:1}" || cd "${APP_VER:0:3}"
-  - travis_retry make
+  - travis_retry make && make test
 
 after_success:
   - bash "${TRAVIS_BUILD_DIR}/travis-release.sh"
