--- a/1.3/Makefile
+++ b/1.3/Makefile
@@ -21,7 +21,7 @@ build:
 
 .PHONY: test
 test:
-	./test.sh $(NAME) $(REPO):$(TAG)
+	cd ./test && IMAGE=$(REPO):$(TAG) ./test.sh
 
 .PHONY: push
 push:
